Fix sponsors scrollbar.

--- a/css/styles-v2.css
+++ b/css/styles-v2.css
@@ -51,7 +51,7 @@ p {
 	margin: 0 auto;
 	max-width: 940px;
 	padding: 0 20px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .column-half {
